--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SERVER_PORT=8080
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=wms19940601
+DB_PASSWORD=87fds443
 DB_NAME=ai_admin
 
 # JWT
